--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
   "description": "Finger print authenticate provider service",
   "main": "index.js",
   "scripts": {
+    "test": "jest",
     "dev": "nodemon --watch 'app/**/*.ts' --ignore 'app/**/*.spec.ts' --exec 'ts-node' app/index.ts"
   },
   "author": "GenesisSam",
@@ -11,15 +12,46 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
-    "express-jwt": "^5.3.1",
+    "express-validator": "^5.3.1",
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.11",
+    "mysql2": "^1.6.5",
+    "nodemailer": "^5.1.1",
     "nodemon": "^1.18.10",
+    "sendmail": "^1.4.1",
     "ts-node": "^8.0.3",
     "typescript": "^3.3.4000"
   },
   "devDependencies": {
     "@types/body-parser": "^1.17.0",
     "@types/express": "^4.16.1",
-    "@types/express-jwt": "0.0.42",
-    "@types/node": "^11.11.6"
+    "@types/express-validator": "^3.0.0",
+    "@types/jest": "^24.0.11",
+    "@types/jsonwebtoken": "^8.3.2",
+    "@types/lodash": "^4.14.123",
+    "@types/mysql2": "github:types/npm-mysql2",
+    "@types/node": "^11.11.6",
+    "@types/nodemailer": "^4.6.6",
+    "@types/sendmail": "^1.4.0",
+    "jest": "^24.5.0",
+    "ts-jest": "^24.0.0"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.ts$": "ts-jest"
+    },
+    "setupFiles": [
+      "<rootDir>/scripts/jestSetup.js"
+    ],
+    "testRegex": "(/__tests__/.*|(\\.|/)spec)\\.(js?|ts?)$",
+    "moduleFileExtensions": [
+      "ts",
+      "js"
+    ],
+    "globals": {
+      "ts-jest": {
+        "diagnostics": true
+      }
+    }
   }
 }
