--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,3 @@
-.idea
-
-*/.idea
-
-
 # Logs
 logs
 *.log
@@ -64,3 +59,6 @@ typings/
 
 # next.js build output
 .next
+
+sendgrid.env
+sqls/.idea/workspace.xml
