--- a/backend/package.json
+++ b/backend/package.json
@@ -10,15 +10,14 @@
   "author": "GenesisSam",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^6.3.1",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "express-validator": "^5.3.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.11",
     "mysql2": "^1.6.5",
-    "nodemailer": "^5.1.1",
     "nodemon": "^1.18.10",
-    "sendmail": "^1.4.1",
     "ts-node": "^8.0.3",
     "typescript": "^3.3.4000"
   },
@@ -31,8 +30,6 @@
     "@types/lodash": "^4.14.123",
     "@types/mysql2": "github:types/npm-mysql2",
     "@types/node": "^11.11.6",
-    "@types/nodemailer": "^4.6.6",
-    "@types/sendmail": "^1.4.0",
     "jest": "^24.5.0",
     "ts-jest": "^24.0.0"
   },
