--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,11 @@
+# Refference here: https://docs.travis-ci.com/user/job-lifecycle/
+
 language: node_js
 node_js:
   - "10.13.0"
 cache: npm
+
+install:
+  true
+  # - npm install
+# script: true
