--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,7 @@ deploy:
     acl: public_read
     wait-until-deployed: true
     local_dir: deploy
+    region: us-east-2
     on:
       repo: everyawake/PRJ-FPA-Backend
       branch: master
