--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,9 @@ script:
   - npm test
 
 before_deploy:
-  - zip -r fpa-backend *
+  - zip -x */.node_modules -r fpa-backend *
   - mkdir -p deploy
+  - ls -al
   - mv fpa-backend.zip deploy/fpa-backend.zip
 
 deploy:
@@ -28,19 +29,16 @@ deploy:
     on:
       repo: everyawake/PRJ-FPA-Backend
       branch: master
-
-  - provider: codedeploy
-    access_key_id: $AWS_ACCESS_KEY
-    secret_access_key: $AWS_SECRET_KEY
-    bucket: fpa-production-deploy
-    key: fpa-backend.zip
-    bundle_type: zip
-    application: fpa-deploy
-    deployment_group: fpa-backend-deploy
-    region: us-east-2
-    wait-until-deployed: true
-    on:
-      repo: everyawake/PRJ-FPA-Backend
-      branch: master
-
-after_script: true
+  # - provider: codedeploy
+  #   access_key_id: $AWS_ACCESS_KEY
+  #   secret_access_key: $AWS_SECRET_KEY
+  #   bucket: fpa-production-deploy
+  #   key: fpa-backend.zip
+  #   bundle_type: zip
+  #   application: fpa-deploy
+  #   deployment_group: fpa-backend-deploy
+  #   region: us-east-2
+  #   wait-until-deployed: true
+  #   on:
+  #     repo: everyawake/PRJ-FPA-Backend
+  #     branch: master
