--- a/.travis.yml
+++ b/.travis.yml
@@ -10,27 +10,7 @@ install:
 
 script:
   - npm test
-
-# before_deploy:
-#   - zip -x node_modules/* -r fpa-backend *
-#   - mkdir -p deploy
-#   - ls -al
-#   - mv fpa-backend.zip deploy/fpa-backend.zip
-#   - ls -al
-#   - ls -al deploy
-
-deploy:
-  - provider: s3
-    access_key_id: $AWS_ACCESS_KEY
-    secret_access_key: $AWS_SECRET_KEY
-    bucket: fpa-production-deploy
-    acl: public_read
-    wait-until-deployed: true
-    region: us-east-2
-    skip_cleanup: true
-    on:
-      repo: everyawake/PRJ-FPA-Backend
-      branch: master
+  - if ["$TRAVIS_BRANCH" = "master"]; then npm run pre-deploy && npm run deploy fi
   # - provider: codedeploy
   #   access_key_id: $AWS_ACCESS_KEY
   #   secret_access_key: $AWS_SECRET_KEY
