--- a/.travis.yml
+++ b/.travis.yml
@@ -11,24 +11,35 @@ install:
 script:
   - npm test
 
+before_deploy:
+  - zip -x node_modules/* -r fpa-backend *
+  - mkdir -p deploy
+  - mv fpa-backend.zip deploy/fpa-backend.zip
+
 deploy:
-  - provider: script
+  - provider: s3
+    access_key_id: $AWS_ACCESS_KEY # Travis repo settings에 설정된 값
+    secret_access_key: $AWS_SECRET_KEY # Travis repo settings에 설정된 값
+    bucket: fpa-production-deploy # S3 버킷
+    region: us-east-2
     skip_cleanup: true
-    script:
-      - npm run pre-deploy
-      - npm run deploy
+    acl: public_read
+    local_dir: deploy # before_deploy에서 생성한 디렉토리
+    wait-until-deployed: true
     on:
+      repo: everyawake/PRJ-FPA-Backend
       branch: master
-  # - provider: codedeploy
-  #   access_key_id: $AWS_ACCESS_KEY
-  #   secret_access_key: $AWS_SECRET_KEY
-  #   bucket: fpa-production-deploy
-  #   key: fpa-backend.zip
-  #   bundle_type: zip
-  #   application: fpa-deploy
-  #   deployment_group: fpa-backend-deploy
-  #   region: us-east-2
-  #   wait-until-deployed: true
-  #   on:
-  #     repo: everyawake/PRJ-FPA-Backend
-  #     branch: master
+
+  - provider: codedeploy
+    access_key_id: $AWS_ACCESS_KEY # Travis repo settings에 설정된 값
+    secret_access_key: $AWS_SECRET_KEY # Travis repo settings에 설정된 값
+    bucket: fpa-production-deploy # S3 버킷
+    key: fpa-backend.zip # S3 버킷에 저장된 springboot-webservice.zip 파일을 EC2로 배포
+    bundle_type: zip
+    application: fpa-backend-deploy-app # 웹 콘솔에서 등록한 CodeDeploy 어플리케이션
+    deployment_group: fpa-backend-codedeploy # 웹 콘솔에서 등록한 CodeDeploy 배포 그룹
+    region: us-east-2
+    wait-until-deployed: true
+    on:
+      repo: everyawake/PRJ-FPA-Backend
+      branch: master
