--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,7 @@ deploy:
     access_key_id: $AWS_ACCESS_KEY # Travis repo settings에 설정된 값
     secret_access_key: $AWS_SECRET_KEY # Travis repo settings에 설정된 값
     bucket: fpa-production-deploy # S3 버킷
-    key: fpa-backend.zip # S3 버킷에 저장된 springboot-webservice.zip 파일을 EC2로 배포
+    key: fpa-backend.zip # S3 버킷에 저장된 *.zip 파일을 EC2로 배포
     bundle_type: zip
     application: fpa-backend-deploy-app # 웹 콘솔에서 등록한 CodeDeploy 어플리케이션
     deployment_group: fpa-backend-codedeploy # 웹 콘솔에서 등록한 CodeDeploy 배포 그룹
