--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "jest",
     "dev": "nodemon --watch 'app/**/*.ts' --ignore 'app/**/*.spec.ts' --exec 'ts-node' app/index.ts",
-    "start": "ts-node --transpileOnly app/index.ts",
-    "production": "export NODE_ENV=production && production"
+    "start": "ts-node -T app/index.ts",
+    "production": "export NODE_ENV=production && npm start"
   },
   "author": "GenesisSam",
   "license": "ISC",
