--- a/appspec.yml
+++ b/appspec.yml
@@ -3,3 +3,12 @@ os: linux
 files:
   - source: /
     destination: /home/ubuntu/app/build
+hooks:
+  BeforeInstall:
+    - location: cd /home/ubuntu/app/build
+    - location: npm i
+      runas: root
+  ApplicationStart:
+    - location: cd /home/ubuntu/app/build
+    - location: npm run production
+    runas: root
