--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "jest",
     "dev": "nodemon --watch 'app/**/*.ts' --ignore 'app/**/*.spec.ts' --exec 'ts-node' app/index.ts",
-    "start": "ts-node -T app/index.ts",
+    "start": "pm2 start --exec 'ts-node' -- -T app/index.ts",
     "production": "export NODE_ENV=production && npm start"
   },
   "author": "GenesisSam",
