--- a/appspec.yml
+++ b/appspec.yml
@@ -6,7 +6,5 @@ files:
 hooks:
   BeforeInstall:
     - location: "cd /home/ubuntu/app/build && npm i"
-    runas: root
-  ApplicationStart:
-    - location: "npm run production"
+    timeout: 3600
     runas: root
