--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "test": "jest",
     "dev": "nodemon --watch 'app/**/*.ts' --ignore 'app/**/*.spec.ts' --exec 'ts-node' app/index.ts",
-    "start": "pm2 start pmApp.js",
-    "production": "export PORT=80 && export NODE_ENV=production && npm start"
+    "pre-production": "pm2 install typescript",
+    "start": "pm2 start pmApp.config.js",
+    "production": "export PORT=80 && export NODE_ENV=production && npm run pre-production && npm start"
   },
   "author": "GenesisSam",
   "license": "ISC",
