--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "nodemon --watch 'app/**/*.ts' --ignore 'app/**/*.spec.ts' --exec 'ts-node' app/index.ts",
     "pre-production": "pm2 install typescript",
     "start": "pm2 start pmApp.config.js",
-    "production": "export PORT=80 && export NODE_ENV=production && npm run pre-production && npm start"
+    "production": "npm run pre-production && npm start"
   },
   "author": "GenesisSam",
   "license": "ISC",
