--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,10 @@ before_deploy:
 - mkdir -p deploy
 - mv fpa-backend.zip deploy/fpa-backend.zip
 deploy:
-  matrix:
+  provider: heroku
+  api_key: "$HEROKU_API_KEY"
+  app: fpa-backend
+  # matrix:
   # - provider: s3
   #   access_key_id: "$AWS_ACCESS_KEY"
   #   secret_access_key: "$AWS_SECRET_KEY"
@@ -45,6 +48,4 @@ deploy:
   #     repo: everyawake/PRJ-FPA-Backend
   #     branch: master
 
-  - provider: heroku
-    api_key: "$HEROKU_API_KEY"
-    app: fpa-backend
+
