--- a/package.json
+++ b/package.json
@@ -6,9 +6,8 @@
   "scripts": {
     "test": "jest",
     "dev": "nodemon --watch 'app/**/*.ts' --ignore 'app/**/*.spec.ts' --exec 'ts-node --files' app/index.ts",
-    "pre-production": "pm2 install typescript",
-    "start": "pm2 start pmApp.config.js",
-    "production": "npm run pre-production && npm start"
+    "pre-production": "pm2 install typescript && pm2 start pmApp.config.js",
+    "start": "npm run pre-production && npm start"
   },
   "author": "GenesisSam",
   "license": "ISC",
