--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,7 +35,7 @@
     // "noFallthroughCasesInSwitch": true,    /* Report errors for fallthrough cases in switch statement. */
     /* Module Resolution Options */
     // "moduleResolution": "node",            /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */
-    // "baseUrl": "." /* Base directory to resolve non-absolute module names. */,
+    "baseUrl": "." /* Base directory to resolve non-absolute module names. */,
     "paths": {
       "app/*": [
         "./app/*"
@@ -44,6 +44,7 @@
     // "rootDirs": [],                        /* List of root folders whose combined content represents the structure of the project at runtime. */
     "typeRoots": [
       "app/typings",
+      "./typings",
       "node_modules/@types"
     ] /* List of folders to include type definitions from. */,
     // "types": [] /* Type declaration files to be included in compilation. */,
