--- a/package.json
+++ b/package.json
@@ -13,30 +13,30 @@
   "author": "GenesisSam",
   "license": "ISC",
   "dependencies": {
-    "@sendgrid/mail": "^6.3.1",
-    "body-parser": "^1.18.3",
+    "@sendgrid/mail": "^6.4.0",
+    "body-parser": "^1.19.0",
     "compression": "^1.7.4",
-    "express": "^4.16.4",
-    "express-validator": "^5.3.1",
+    "express": "^4.17.1",
+    "express-validator": "^6.1.1",
     "jsonwebtoken": "^8.5.1",
-    "lodash": "^4.17.11",
+    "lodash": "^4.17.15",
     "mysql2": "^1.6.5",
-    "nodemon": "^1.18.10",
+    "nodemon": "^1.19.1",
     "pm2": "^3.5.0",
     "shortid": "^2.2.14",
-    "ts-node": "^8.0.3",
-    "typescript": "^3.3.4000"
+    "ts-node": "^8.3.0",
+    "typescript": "^3.5.3"
   },
   "devDependencies": {
-    "@types/body-parser": "^1.17.0",
-    "@types/compression": "0.0.36",
-    "@types/express": "^4.16.1",
+    "@types/body-parser": "^1.17.1",
+    "@types/compression": "^1.0.1",
+    "@types/express": "^4.17.1",
     "@types/express-validator": "^3.0.0",
     "@types/jest": "^24.0.11",
-    "@types/jsonwebtoken": "^8.3.2",
-    "@types/lodash": "^4.14.123",
+    "@types/jsonwebtoken": "^8.3.3",
+    "@types/lodash": "^4.14.137",
     "@types/mysql2": "github:types/npm-mysql2",
-    "@types/node": "^11.11.6",
+    "@types/node": "^12.7.2",
     "@types/shortid": "0.0.29",
     "jest": "^24.5.0",
     "ts-jest": "^24.0.0"
