--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/shortid": "0.0.29",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-validator": "^6.1.1",
     "firebase-admin": "^8.5.0",
@@ -35,10 +36,15 @@
     "nodemon": "^1.19.1",
     "pm2": "^3.5.0",
     "shortid": "^2.2.14",
+    "socket.io": "^2.2.0",
+    "socket.io-client": "^2.2.0",
     "ts-node": "^8.3.0",
     "typescript": "^3.5.3"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.6",
+    "@types/socket.io": "^2.1.2",
+    "@types/socket.io-client": "^1.4.32",
     "jest": "^24.5.0",
     "ts-jest": "^24.0.0"
   },
