--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "GenesisSam",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^6.4.0",
     "@types/body-parser": "^1.17.1",
     "@types/compression": "^1.0.1",
     "@types/express": "^4.17.1",
@@ -23,21 +24,27 @@
     "@types/mysql2": "github:types/npm-mysql2",
     "@types/node": "^12.7.2",
     "@types/shortid": "0.0.29",
-    "@sendgrid/mail": "^6.4.0",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-validator": "^6.1.1",
+    "firebase-admin": "^8.5.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "mysql2": "^1.6.5",
     "nodemon": "^1.19.1",
     "pm2": "^3.5.0",
     "shortid": "^2.2.14",
+    "socket.io": "^2.2.0",
+    "socket.io-client": "^2.2.0",
     "ts-node": "^8.3.0",
     "typescript": "^3.5.3"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.6",
+    "@types/socket.io": "^2.1.2",
+    "@types/socket.io-client": "^1.4.32",
     "jest": "^24.5.0",
     "ts-jest": "^24.0.0"
   },
